--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,9 +78,9 @@ ga('send', 'pageview');
     <!-- Site Tag
     ================================================== -->
     {% if page.url == '/' %}
-        <p class="sitetag">
+        <!-- <p class="sitetag">
             {{ site.description }}
-        </p>
+        </p> -->
     {% endif %}
 
     <!-- Content
