--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,7 +92,7 @@ ga('send', 'pageview');
     {% if site.mailchimp-list %}
     <!-- Newsletter
     ================================================== -->
-    <div class="newsletter text-center">
+    <!-- <div class="newsletter text-center">
         <span class="h4"><img src="{{ site.baseurl }}/{{ site.logo }}" class="newsletter-logo" alt="{{site.title}}"> &nbsp; Never miss a <b>story</b> from us, subscribe to our newsletter</span>
         <form action="{{site.mailchimp-list}}" method="post" name="mc-embedded-subscribe-form" class="wj-contact-form validate" target="_blank" novalidate>
             <div class="mc-field-group d-inline-flex">
@@ -100,7 +100,7 @@ ga('send', 'pageview');
             <input type="submit" value="Subscribe" name="subscribe" class="heart">
             </div>
         </form>
-    </div>
+    </div> -->
     {% endif %}
     
 </div>
@@ -113,9 +113,9 @@ ga('send', 'pageview');
             <div class="col-md-6 col-sm-12 text-center text-lg-left">
                 Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
             </div>
-            <div class="col-md-6 col-sm-12 text-center text-lg-right">    
+            <!-- <div class="col-md-6 col-sm-12 text-center text-lg-right">    
                 <a target="_blank" href="https://www.wowthemes.net/memoirs-free-jekyll-theme/">Memoirs Jekyll Theme</a> by WowThemes.net
-            </div>
+            </div> -->
         </div>
     </div>
 </footer>
