--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@ ga('send', 'pageview');
     ================================================== -->
    
     <a class="navbar-brand" href="{{ site.baseurl }}/">
-        <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}" style="text-align: center;">
+        <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}" style="display: block; margin-left: auto; margin-right: auto; width: 50%;">
     </a>  
    
 
