--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,14 +71,14 @@ ga('send', 'pageview');
     ================================================== -->
    
     <a class="navbar-brand" href="{{ site.baseurl }}/">
-        <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}" style="display: block; margin-left: auto; margin-right: auto; width: 50%;">
+        <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
     </a>  
    
 
     <!-- Site Tag
     ================================================== -->
     {% if page.url == '/' %}
-        <p class="sitetag" style="font-size: 22px;">
+        <p class="" style="font-size: 22px;">
             {{ site.description }}
         </p>
     {% endif %}
