--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -113,9 +113,9 @@ ga('send', 'pageview');
             <div class="col-md-6 col-sm-12 text-center text-lg-left">
                 Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
             </div>
-            <!-- <div class="col-md-6 col-sm-12 text-center text-lg-right">    
-                <a target="_blank" href="https://www.wowthemes.net/memoirs-free-jekyll-theme/">Memoirs Jekyll Theme</a> by WowThemes.net
-            </div> -->
+            <div class="col-md-6 col-sm-12 text-center text-lg-right">    
+                <a href="https://www.buymeacoffee.com/hxri"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=☕&slug=hxri&button_colour=FF5F5F&font_colour=ffffff&font_family=Poppins&outline_colour=000000&coffee_colour=FFDD00"></a>
+            </div>
         </div>
     </div>
 </footer>
